PA2579/muJava/compile_output
D:\GitHub\Courses\PA2579\muJava\result\main.java.assignment.WeightHelper\traditional_mutants\java.lang.String_bmiCat(double,double)\VDL_9\WeightHelper.java:31: error: bad operand types for binary operator '&'
                if (18.5 & bmiValue < 25.0) {
                         ^
  first type:  double
  second type: boolean
1 error
